# c_template

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  cmakelists.txt  makefile  readme.md
.github/workflows/: unit_test.yml
lib/application/: CMakeLists.txt  makefile
lib/application/src/: main.c
lib/hello/: CMakeLists.txt  makefile  readme.md
lib/hello-nucleo/: .mxproject  CMakeLists.txt  CMakeLists_template.txt  hello-nucleo.ioc
lib/hello-nucleo/Core/Inc/: main.h  stm32g0xx_hal_conf.h  stm32g0xx_it.h
lib/hello-nucleo/Core/Src/: main.c  stm32g0xx_hal_msp.c  stm32g0xx_it.c  syscalls.c  sysmem.c  system_stm32g0xx.c
lib/hello-nucleo/Drivers/CMSIS/Device/ST/STM32G0xx/Include/: stm32g0b1xx.h  stm32g0xx.h  system_stm32g0xx.h
lib/hello-nucleo/Drivers/CMSIS/Include/: cmsis_armcc.h  cmsis_armclang.h  cmsis_armclang_ltm.h  cmsis_compiler.h  cmsis_gcc.h  cmsis_iccarm.h  cmsis_version.h  core_armv81mml.h  core_armv8mbl.h  core_armv8mml.h  core_cm0.h  core_cm0plus.h  core_cm1.h  core_cm23.h  core_cm3.h  core_cm33.h  core_cm35p.h  core_cm4.h  core_cm7.h  core_sc000.h  core_sc300.h  mpu_armv7.h  mpu_armv8.h  tz_context.h
lib/hello-nucleo/Drivers/STM32G0xx_HAL_Driver/Inc/: stm32g0xx_hal.h  stm32g0xx_hal_cortex.h  stm32g0xx_hal_def.h  stm32g0xx_hal_dma.h  stm32g0xx_hal_dma_ex.h  stm32g0xx_hal_exti.h  stm32g0xx_hal_flash.h  stm32g0xx_hal_flash_ex.h  stm32g0xx_hal_gpio.h  stm32g0xx_hal_gpio_ex.h  stm32g0xx_hal_pwr.h  stm32g0xx_hal_pwr_ex.h  stm32g0xx_hal_rcc.h  stm32g0xx_hal_rcc_ex.h  stm32g0xx_hal_tim.h  stm32g0xx_hal_tim_ex.h  stm32g0xx_hal_uart.h  stm32g0xx_hal_uart_ex.h  stm32g0xx_ll_bus.h  stm32g0xx_ll_cortex.h  stm32g0xx_ll_crs.h  stm32g0xx_ll_dma.h  stm32g0xx_ll_dmamux.h  stm32g0xx_ll_exti.h  stm32g0xx_ll_gpio.h  stm32g0xx_ll_lpuart.h  stm32g0xx_ll_pwr.h  stm32g0xx_ll_rcc.h  stm32g0xx_ll_system.h  stm32g0xx_ll_usart.h  stm32g0xx_ll_utils.h
lib/hello-nucleo/Drivers/STM32G0xx_HAL_Driver/Inc/Legacy/: stm32_hal_legacy.h
lib/hello-nucleo/Drivers/STM32G0xx_HAL_Driver/Src/: stm32g0xx_hal.c  stm32g0xx_hal_cortex.c  stm32g0xx_hal_dma.c  stm32g0xx_hal_dma_ex.c  stm32g0xx_hal_exti.c  stm32g0xx_hal_flash.c  stm32g0xx_hal_flash_ex.c  stm32g0xx_hal_gpio.c  stm32g0xx_hal_pwr.c  stm32g0xx_hal_pwr_ex.c  stm32g0xx_hal_rcc.c  stm32g0xx_hal_rcc_ex.c  stm32g0xx_hal_tim.c  stm32g0xx_hal_tim_ex.c  stm32g0xx_hal_uart.c  stm32g0xx_hal_uart_ex.c  stm32g0xx_ll_dma.c  stm32g0xx_ll_rcc.c
lib/hello/src/: hello.c  hello.h
src/: hello.c  hello.h  main.c
test/: hello.test.cpp  main.test.cpp
